--- a/Model/web/内容页-简洁-无评论.html
+++ b/Model/web/内容页-简洁-无评论.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
         <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
         <!--[if IE 7]>    <html class="lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
         <!--[if IE 8]>    <html class="lt-ie9" lang="en-US"> <![endif]-->
@@ -269,17 +269,7 @@
                                                 </div>
                                                 <div class="span6">
                                                         <!-- Social Navigation -->
-                                                        <ul class="social-nav clearfix">
-                                                                <li class="linkedin"><a target="_blank" href="#"></a></li>
-                                                                <li class="stumble"><a target="_blank" href="#"></a></li>
-                                                                <li class="google"><a target="_blank" href="#"></a></li>
-                                                                <li class="deviantart"><a target="_blank" href="#"></a></li>
-                                                                <li class="flickr"><a target="_blank" href="#"></a></li>
-                                                                <li class="skype"><a target="_blank" href="skype:#?call"></a></li>
-                                                                <li class="rss"><a target="_blank" href="#"></a></li>
-                                                                <li class="twitter"><a target="_blank" href="#"></a></li>
-                                                                <li class="facebook"><a target="_blank" href="#"></a></li>
-                                                        </ul>
+                                                       
                                                 </div>
                                         </div>
                                 </div>
