--- a/Model/web/联系我们-内容展示.html
+++ b/Model/web/联系我们-内容展示.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
         <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en-US"> <![endif]-->
         <!--[if IE 7]>    <html class="lt-ie9 lt-ie8" lang="en-US"> <![endif]-->
         <!--[if IE 8]>    <html class="lt-ie9" lang="en-US"> <![endif]-->
@@ -109,44 +109,6 @@
 
                                                         <hr>
 
-                                                        <h3>Tabs</h3>
-
-                                                        <ul class="tabs-nav">
-                                                                <li class="active" style=""><a href="#">First Tab</a></li>
-                                                                <li><a href="#">Second Tab</a></li>
-                                                                <li><a href="#">Third Tab</a></li>
-                                                        </ul>
-
-                                                        <div class="tabs-container">
-                                                                <div class="tab-content">First lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</div>
-                                                                <div class="tab-content">Second lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</div>
-                                                                <div class="tab-content">Third lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</div>
-                                                        </div>
-
-                                                        <h3>Accordion</h3>
-                                                        <dl class="accordion clearfix">
-                                                                <dt><span></span>First Accordion Item</dt>
-                                                                <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
-
-                                                                <dt><span></span>Second Accordion Item</dt>
-                                                                <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
-
-                                                                <dt><span></span>Third Accordion Item</dt>
-                                                                <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
-                                                        </dl>
-
-                                                        <h3>Toggles</h3>
-                                                        <dl class="toggle clearfix">
-                                                                <dt><span></span>First Accordion Item</dt>
-                                                                <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
-
-                                                                <dt><span></span>Second Accordion Item</dt>
-                                                                <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
-
-                                                                <dt><span></span>Third Accordion Item</dt>
-                                                                <dd>Although starting a prototype on a is sometimes easi problem-solve. When you need to ideate website prototype on a is sometimes easier, it’s not the best When you or to storyboard context Although starting a prototype on a is sometimes easi problem- solve. When you need to ideate website …</dd>
-                                                        </dl>
-
                                                         <h3>Blockquote</h3>
                                                         <blockquote>
                                                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
@@ -173,66 +135,7 @@
                 <!-- End of Page Container -->
 
                 <!-- Start of Footer -->
-                <footer id="footer-wrapper">
-                        <div id="footer" class="container">
-                                <div class="row">
 
-                                        <div class="span3">
-                                                <section class="widget">
-                                                        <h3 class="title">How it works</h3>
-                                                        <div class="textwidget">
-                                                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-                                                                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </p>
-                                                        </div>
-                                                </section>
-                                        </div>
-
-                                        <div class="span3">
-                                                <section class="widget"><h3 class="title">Categories</h3>
-                                                        <ul>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet,">Advanced Techniques</a> </li>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet,">Designing in WordPress</a></li>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet,">Server &amp; Database</a></li>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet, ">Theme Development</a></li>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet,">Website Dev</a></li>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet,">WordPress for Beginners</a></li>
-                                                                <li><a href="#" title="Lorem ipsum dolor sit amet, ">WordPress Plugins</a></li>
-                                                        </ul>
-                                                </section>
-                                        </div>
-
-                                        <div class="span3">
-                                                <section class="widget">
-                                                        <h3 class="title">Latest Tweets</h3>
-                                                        <div id="twitter_update_list">
-                                                                <ul>
-                                                                        <li>No Tweets loaded !</li>
-                                                                </ul>
-                                                        </div>
-                                                        <script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
-                                                        <script type="text/javascript" >
-                                                                getTwitters("twitter_update_list", {
-                                                                        id: "960development",
-                                                                        count: 3,
-                                                                        enableLinks: true,
-                                                                        ignoreReplies: true,
-                                                                        clearContents: true,
-                                                                        template: "%text% <span>%time%</span>"
-                                                                });
-                                                        </script>
-                                                </section>
-                                        </div>
-
-                                        <div class="span3">
-                                                <section class="widget">
-                                                        <h3 class="title">Flickr Photos</h3>
-                                                        <div class="flickr-photos" id="basicuse">
-                                                        </div>
-                                                </section>
-                                        </div>
-
-                                </div>
-                        </div>
                         <!-- end of #footer -->
 
                         <!-- Footer Bottom -->
@@ -246,17 +149,7 @@
                                                 </div>
                                                 <div class="span6">
                                                         <!-- Social Navigation -->
-                                                        <ul class="social-nav clearfix">
-                                                                <li class="linkedin"><a target="_blank" href="#"></a></li>
-                                                                <li class="stumble"><a target="_blank" href="#"></a></li>
-                                                                <li class="google"><a target="_blank" href="#"></a></li>
-                                                                <li class="deviantart"><a target="_blank" href="#"></a></li>
-                                                                <li class="flickr"><a target="_blank" href="#"></a></li>
-                                                                <li class="skype"><a target="_blank" href="skype:#?call"></a></li>
-                                                                <li class="rss"><a target="_blank" href="#"></a></li>
-                                                                <li class="twitter"><a target="_blank" href="#"></a></li>
-                                                                <li class="facebook"><a target="_blank" href="#"></a></li>
-                                                        </ul>
+                                                      
                                                 </div>
                                         </div>
                                 </div>
