--- a/Model/web/CategoryContent.html
+++ b/Model/web/CategoryContent.html
@@ -15,12 +15,10 @@
                 <!-- Style Sheet-->
                 <link rel="stylesheet" href="style.css"/>
                 <link rel='stylesheet' id='bootstrap-css-css'  href='css/bootstrap.css?ver=1.0' type='text/css' media='all' />
-                <link rel='stylesheet' id='responsive-css-css'  href='css/responsive5152.css?ver=1.0' type='text/css' media='all' />
+                <link rel='stylesheet' id='responsive-css-css'  href='css/responsive.css?ver=1.0' type='text/css' media='all' />
                 <link rel='stylesheet' id='pretty-photo-css-css'  href='js/prettyphoto/prettyPhotoaeb9.css?ver=3.1.4' type='text/css' media='all' />
-                <link rel='stylesheet' id='main-css-css'  href='css/main5152.css?ver=1.0' type='text/css' media='all' />
-                <link rel='stylesheet' id='custom-css-css'  href='css/custom5152.html?ver=1.0' type='text/css' media='all' />
-
-
+                <link rel='stylesheet' id='main-css-css'  href='css/main.css?ver=1.0' type='text/css' media='all' />
+             
                 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
                 <!--[if lt IE 9]>
                  <script src="js/html5.js"></script></script>
@@ -48,30 +46,15 @@
                                         <!-- Start of Main Navigation -->
                                         <nav class="main-nav">
                                                 <div class="menu-top-menu-container">
-                                                        <ul id="menu-top-menu" class="clearfix">
-                                                                <li><a href="index-2.html">Home</a></li>
-                                                                <li><a href="home-categories-description.html">Home 2</a></li>
-                                                                <li class="current-menu-item"><a href="home-categories-articles.html">Home 3</a></li>
-                                                                <li><a href="articles-list.html">Articles List</a></li>
-                                                                <li><a href="faq.html">FAQs</a></li>
-                                                                <li><a href="#">Skins</a>
-                                                                        <ul class="sub-menu">
-                                                                                <li><a href="blue-skin.html">Blue Skin</a></li>
-                                                                                <li><a href="green-skin.html">Green Skin</a></li>
-                                                                                <li><a href="red-skin.html">Red Skin</a></li>
-                                                                                <li><a href="index-2.html">Default Skin</a></li>
-                                                                        </ul>
-                                                                </li>
-                                                                <li><a href="#">More</a>
-                                                                        <ul class="sub-menu">
-                                                                                <li><a href="full-width.html">Full Width</a></li>
-                                                                                <li><a href="elements.html">Elements</a></li>
-                                                                                <li><a href="page.html">Sample Page</a></li>
-                                                                        </ul>
-                                                                </li>
-                                                                <li><a href="contact.html">Contact</a></li>
-                                                        </ul>
-                                                </div>
+                                                    <ul id="menu-top-menu" class="clearfix">
+                                                        <li class="current-menu-item"><a href="index.html">首页</a></li>
+                                                        <li><a href="Category.html">版块</a></li>
+                                                        <li><a href="CategoryContent.html">板块热点</a></li>
+                                                        <li><a href="hot.html">加精帖子</a></li>
+                                                        <li><a href="linkME.html">联系我们</a></li>
+                                                        <li><a href="linkMEContent.html">常见反馈</a></li>
+
+                                                    </ul>
                                         </nav>
                                         <!-- End of Main Navigation -->
 
